@@ -1,3 +1,4 @@
+* Add option to check new version
 * Show related record names for all windows
 * Remove support of GTK+ 2.0
 * Add icons on Many2One in editable tree
